tests/types/errors/infer_var_from_void.mog
fn logValue() {
    print("hi")
}

var result = logValue()
